--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ root = true
 
 # Unix-style newlines with a newline ending every file
 # Matches multiple files with brace expansion notation
-# Set default charse
+# Set default charset
 [*.{js,md}]
 end_of_line = lf
 insert_final_newline = true
